2005-08-17  Don Allingham  <don@gramps-project.org>
	* src/FamilyView.py: commit person when removed from family

2005-08-18  Eero Tamminen  <eerot@sf>
	* src/GenericFilter.py, src/Marriage.py, src/plugins/TimeLine.py,
	  src/plugins/SimpleBookTitle.py: add localization context for
	  "Title" string (needed in Finnish)
	* src/ReportUtils.py: Add header option for draw_legend()
	* src/plugins/StatisticsChart.py: add headers to legends and
	  barcharts, change chart type names to singular form, add
	  support for ProgressMeter, swap bar&text position as text
	  rightaligning in Gramps is broken (it can't know font metrics)

2005-08-17  Don Allingham  <don@gramps-project.org>
	* src/Marriage.py: fix lds_data_object problem
	* src/GrampsDBCallback.py: look for GRAMPS_SIGNAL environment
	variable equal to 1 to enable signal debugging
	* src/ChooseParents.py: disconnect signals on close, do fewer
	commits

2005-08-17  Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/plugins/ExportVCalendar.py: fixed import for localtime,
	corrected type of Utils and params to Until.family_name
	made "Version" upper case as demanded by Korganiser and
	the spec (I think).
	
2005-08-17  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Fix/improve Finnish translations

2005-08-16  Don Allingham  <don@gramps-project.org>
	* src/plugins/NavWebPage.py: fix paths in surname page
	* src/Sources.py: Limit the source title to 40 characters
	* src/MergePeople.py: correctly handle selection of first person
	* src/MediaView.py: add mediaobj to DND types
	* src/plugins/ScratchPad.py: fill out rest of media details (type,value)
	* src/EditPerson.py: hide LDS if not requested
	* src/Marriage.py: hide LDS if not requested
	* src/Spell.py: re-enable
	* src/GrampsCfg.py: add support for spell checker
	* src/GrampsGconfKeys.py: add support for spell checker
	* src/GrampsIniKeys.py: add support for spell checker
	* src/gramps.glade: add support for spell checker