@@ -1,4 +1,6 @@
 2005-08-17  Don Allingham  <don@gramps-project.org>
+	* src/plugins/NavWebPage.py: fix source reference links on the 
+	source page.
 	* src/FamilyView.py: commit person when removed from family
 
 2005-08-18  Eero Tamminen  <eerot@sf>
